2005-01-19  Peter Niederlag  <peter@niederlag.de>

	* Fixed issue #2268 on cleanup of sysext:css_styled_content
	* Fixed small issue with link in LICENSE.txt
	
2005-01-19  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* add t3lib_div::sysLog() for Core logging
	* use t3lib_div::sysLog() in t3lib_db->sql_pconnect() and t3lib_db->sql_select_db()
	* add no_quote parameter to t3lib_db->fullQuoteArray() and to all SQL statement generating functions of t3lib_db

2006-01-19  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* New feature: Revised Undo/History feature.
	* Fixed issue #1952: New hook in class.t3lib_userauthgroup.php
	* Fixed issue #2243: Hook needed in class.t3lib_befunc.php, function getProcessedValue
	* Fixed bug #2293: Javascript warnings

2006-01-19  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Changes to the htmlArea RTE extension (details see local ChangeLog)

2006-01-18  Dmitry Dulepov  <typo3@accio.lv>

	* indexed_search: Removed empty line at the end of class.tx_indexedsearch.php. This line caused undesired effects in MSIE with certain PHP versions and UTF-8 encoding in FE.

2006-01-18  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #1869: Copy sites with flexible content elements inside crash with fatal error
	* Fixed bug #2136: changing extended view in list mode changes focus
	* New feature #1320: stdWrap for all ATagParams (except config.ATagParams)

2006-01-18  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed bugs #277, #1030 and #1472 which are all related to the same charset issue.

2006-01-17  Karsten Dambekalns  <karsten@typo3.org>

	* Fixed bug #432

2006-01-17 Wolfgang Klinger  <wk@plan2.net>

	* Update the timestamp field (TCA/ctrl/tstamp) on delete

2006-01-16 Dmitry Dulepov  <typo3@accio.lv>

	* Fixed bug #2160: Turn off workspaces module for certain users not possible

2006-01-14 Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed #2248: Path disclosure in config_default.php and showpic.php
